# math

./: README.md  pyproject.toml
math/: __init__.py
maths/: __init__.py
tests/: test_math.py  test_maths.py
